--- a/doc/TODO
+++ b/doc/TODO
@@ -19,3 +19,5 @@ where to go for what to do (tutorial pages)
 
 move to jmk (java make) or even ant
 move MKDEP from defs.mk to local.mk
+
+job get output both stdout and stderr, not just stdout
