--- a/doc/TODO
+++ b/doc/TODO
@@ -21,3 +21,5 @@ move to jmk (java make) or even ant
 move MKDEP from defs.mk to local.mk
 
 job get output both stdout and stderr, not just stdout
+
+rename database field "host type" to "host gridftp type"
