--- a/doc/TODO
+++ b/doc/TODO
@@ -4,22 +4,16 @@ Add configuration to Apache to not permit SSLv2.
 	- should be the command "SSLProtocol all -SSLv2" but figure
 	  out where it goes (this should be a real quick fix)
 
-Add timestamp to submitted jobs.
-
-Add example suite and show equivalent of "globus-job-run" commands
-for a variety of examples.
-
-Job submit:
-	- load RSL
-	- local binary/staging
+- Add timestamp to submitted jobs.
+- Add job submission example suite/guide
+- load rsl for job submit option
 
 overview/index page
 - where to go for what to do (tutorial pages)
 
-move to jmk (java make) or even ant
-
-move MKDEP from defs.mk to local.mk
-
-job get output both stdout and stderr, not just stdout
-
-rename database field "host type" to "host gridftp type"
+misc
+- move to jmk (java make) or even ant
+- move MKDEP from defs.mk to local.mk
+- job get output both stdout and stderr, not just stdout
+- rename database field "host type" to "host gridftp type"
+- show all job fields on job output page (original form submission values)
