comment out unused FILES for now

--- a/tools/splunderd/splunderd.1
+++ b/tools/splunderd/splunderd.1
@@ -15,12 +15,12 @@ GridFE.
 It authenticates to GridFE using existing Kerberos credentials
 and attempts to grab the RSS stream specified in its
 configuration, which defaults to the RSS for job status.
-.Sh FILES
-.Bl -tag -width Pa -compact
-.It Pa ~/.splunder
-.Nm
-configuration file
-.El
+.\" .Sh FILES
+.\" .Bl -tag -width Pa -compact
+.\" .It Pa ~/.splunder
+.\" .Nm
+.\" configuration file
+.\" .El
 .Sh COPYRIGHT
 Copyright
 .Pq c
