--- a/doc/TODO
+++ b/doc/TODO
@@ -25,3 +25,7 @@ misc
 
 - fix ClassNotFoundException: gridfe.www.t
   when requesting gridfe.psc.edu/gridfe/gridfe/t
+
+- revamp buildURL -- take an array of query string params which
+  all get URL-escaped, use & instead of &amp;, and make sure resulting
+  URLs are always HTML-escaped when being written to a page.
